# max_pkgs

max_camera/: CMakeLists.txt  package.xml
max_camera/src/: video_publisher.cpp
max_motor_driver/: CMakeLists.txt  package.xml
max_motor_driver/launch/: driver_camera.launch  motor_driver.launch
max_motor_driver/src/: motor_driver.cpp  teste.cpp
max_msgs/: CMakeLists.txt  package.xml
max_msgs/msg/: MovementCommand.msg
max_teleop/: CMakeLists.txt  package.xml
max_teleop/src/: max_teleop_node.cpp
max_velocity_sensor/: CMakeLists.txt  package.xml
max_velocity_sensor/src/: velocity_sensor.cpp
